--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "astro": "astro",
     "clean": "rm -rf dist"
   },
+  "defunctDependencies": {
+    "@adjust/components": "^15.4.0"
+  },
   "dependencies": {
-    "@adjust/components": "^15.4.0",
     "@algolia/client-search": "^4.22.1",
     "@astrojs/mdx": "^2.1.1",
     "@astrojs/react": "^3.0.9",
